# asterinas

./: Makefile  OSDK.toml
.github/workflows/: benchmark_asterinas.yml
corten_scripts/: macrodedup.sh  macrometis.sh  macropsearchy.sh  start_linux.sh
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/fs/: mod.rs
kernel/src/fs/utils/: mod.rs
kernel/src/process/: mod.rs
kernel/src/process/process/: mod.rs
kernel/src/process/process_vm/: mod.rs
kernel/src/sched/sched_class/: mod.rs
kernel/src/syscall/: execve.rs  mmap.rs  mount.rs
kernel/src/thread/: mod.rs  task.rs
kernel/src/vm/vmar/: mod.rs  vm_mapping.rs
modules/: Cargo.toml
modules/fs/exfat/: Cargo.toml
modules/fs/exfat/src/: lib.rs  utils.rs
modules/src/: lib.rs
ostd/: Cargo.toml
ostd/src/: lib.rs  logger.rs
ostd/src/arch/x86/: tdx_guest.rs
ostd/src/boot/: memory_region.rs  smp.rs
ostd/src/cpu/: set.rs
ostd/src/io/io_mem/: mod.rs
ostd/src/mm/: mod.rs  test.rs  tlb.rs  vm_space.rs
ostd/src/mm/frame/: meta.rs
ostd/src/mm/heap_allocator/: common.rs  mod.rs
ostd/src/mm/kspace/: kvirt_area.rs  mod.rs
ostd/src/mm/page/: mod.rs
ostd/src/mm/page_table/: boot_pt.rs  cursor.rs  mod.rs  test.rs
ostd/src/mm/tlb/: mod.rs
ostd/src/sync/: mod.rs  spin.rs
ostd/src/task/: mod.rs  processor.rs
ostd/src/trap/: irq.rs
test/: Makefile
test/apps/: Makefile  test_common.mk
test/apps/scale_old/: common.h
test/apps/scripts/: corten_benchdedup.sh  corten_benchmetis.sh  micro_bench_vm_scale_old.sh  process.sh
test/nix/: default.nix  initramfs.nix
tools/: qemu_args.sh
(+32 files in other folders)
