[package]
name = "aster-modules"
version = "0.1.0"
edition = "2021"

[dependencies]
aster-nix = { path = "../kernel" }
ostd = { path = "../ostd" }
aster-exfat = { path = "fs/exfat" }

[target.x86_64-unknown-none.dependencies]
tdx-guest = { version = "0.2.1", optional = true }

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = { version = "0.11.1", features = ["s-mode"] }

[features]
all = ["cvm_guest"]
cvm_guest = ["dep:tdx-guest", "ostd/cvm_guest"]

[lints]
workspace = true